Added main header and stats (HTML and styling)

--- a/index.html
+++ b/index.html
@@ -34,9 +34,55 @@
             </div>
         </div>
 
+        <!-- Main -->
+        <div class="main-container"> 
+            <div class="main-header">
+                <div>
+                    <h1>Overview</h1>
+                </div>
 
-        <div class="main-container"> <!-- Main -->
+                <div class="main-header-menu">
+                    <div class="main-header-menu-icons">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-bell"></i>
+                    </div>
+                    <p>Steffan Scholten</p>
+                    <img src="images/userimg.jpeg" alt="user image">
+                </div>
+            </div>
 
+            <div class="main-stats-open">
+                <h3>Open</h3>
+                <p>21</p>
+            </div>
+
+            <div class="main-stats-unresolved">
+                <h3>Unresolved</h3>
+                <p>43</p>
+            </div>
+
+            <div class="main-stats-onhold">
+                <h3>On Hold</h3>
+                <p>35</p>
+            </div>
+
+            <div class="main-stats-overdue">
+                <h3>Overdue</h3>
+                <p>16</p>
+            </div>
+            
+
+            <div class="main-trends">
+
+            </div>
+
+            <div class="main-unresolved-tickets">
+
+            </div>
+
+            <div class="main-resolved-tickets">
+
+            </div>
         </div>
     </div>
 </body>
