Added today's trends section (HTML & Styling)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,26 @@
             
 
             <div class="main-trends">
+                <div class="trends-graph">
+                    <h2>Today's trends</h2>
+                </div>
 
+                <div class="trends-resolved trends-stats">
+                    <h3>Resolved</h3>
+                    <p>449</p>
+                </div>
+                <div class="trends-received trends-stats">
+                    <h3>Received</h3>
+                    <p>426</p>
+                </div>
+                <div class="trends-average trends-stats">
+                    <h3>Average response time</h3>
+                    <p>3h 8m</p>
+                </div>
+                <div class="trends-sla trends-stats">
+                    <h3>Resolution within SLA</h3>
+                    <p>94%</p>
+                </div>
             </div>
 
             <div class="main-unresolved-tickets">
