Fixed sidebar growing to long and not being sticky

--- a/index.html
+++ b/index.html
@@ -96,7 +96,28 @@
             </div>
 
             <div class="main-unresolved-tickets">
+                <div class="ticket-title">
+                    <h2>Unresolved Tickets</h2>
+                    <a href="#">View details</a>
+                </div>
+                <p><span class="grey-text">Group:</span> Support</p>
 
+                <div class="ticket">
+                    <p>Waiting on Feature Request</p>
+                    <p class="feature-number">4238</p>
+                </div>
+                <div class="ticket">
+                    <p>Awaiting Customer Response</p>
+                    <p class="feature-number">1005</p>
+                </div>
+                <div class="ticket">
+                    <p>Awaiting Developer Fix</p>
+                    <p class="feature-number">905</p>
+                </div>
+                <div class="ticket">
+                    <p>Pending</p>
+                    <p class="feature-number">281</p>
+                </div>
             </div>
 
             <div class="main-resolved-tickets">
