Added Unresolved tickets section HTML and Styling

--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
                 </div>
             </div>
 
-            <div class="main-stats-open">
+            <div class="main-stats-open stats-h3">
                 <h3>Open</h3>
                 <p>21</p>
             </div>
 
-            <div class="main-stats-unresolved">
+            <div class="main-stats-unresolved stats-h3">
                 <h3>Unresolved</h3>
                 <p>43</p>
             </div>
 
-            <div class="main-stats-onhold">
+            <div class="main-stats-onhold stats-h3">
                 <h3>On Hold</h3>
                 <p>35</p>
             </div>
 
-            <div class="main-stats-overdue">
+            <div class="main-stats-overdue stats-h3">
                 <h3>Overdue</h3>
                 <p>16</p>
             </div>
@@ -100,7 +100,9 @@
                     <h2>Unresolved Tickets</h2>
                     <a href="#">View details</a>
                 </div>
-                <p><span class="grey-text">Group:</span> Support</p>
+                <div class="small-title">
+                    <p><span class="grey-text">Group:</span> Support</p>
+                </div>
 
                 <div class="ticket">
                     <p>Waiting on Feature Request</p>
