Added tasks section (HTMl & CSS)

--- a/index.html
+++ b/index.html
@@ -122,8 +122,35 @@
                 </div>
             </div>
 
-            <div class="main-resolved-tickets">
+            <div class="main-tasks">
+                <div class="ticket-title">
+                    <h2>Tasks</h2>
+                    <a href="#">View all</a>
+                </div>
+                <div class="small-title">
+                    <p><span class="grey-text">Today</span></p>
+                </div>
 
+                <div class="ticket">
+                    <input type="checkbox">
+                    <p>Finish ticket update</p>
+                    <p class="task-prio-urgent">URGENT</p>
+                </div>
+                <div class="ticket">
+                    <input type="checkbox">
+                    <p>Create new ticket example</p>
+                    <p class="task-prio-new">NEW</p>
+                </div>
+                <div class="ticket">
+                    <input type="checkbox">
+                    <p>Update ticket report</p>
+                    <p class="task-prio-default">DEFAULT</p>
+                </div>
+                <div class="ticket">
+                    <input type="checkbox">
+                    <p>Close ticket report</p>
+                    <p class="task-prio-assigned">ASSIGNED</p>
+                </div>
             </div>
         </div>
     </div>
