Gave Mmackz more credits

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!-- RECREATED THIS ADMIN DASHBOARD: https://github.com/mmackz/admin-dashboard -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Odin Project: Admin Dashboard</title>
@@ -38,7 +39,7 @@
         <div class="main-container"> 
             <div class="main-header">
                 <div>
-                    <h1>Overview</h1>
+                    <h1>Overview <span class="credits">(I recreated: <a href="https://github.com/mmackz/admin-dashboard" target="_blank">Mmackz Dashboard</a>)</span></h1>
                 </div>
 
                 <div class="main-header-menu">
